# Common2

./: CMakeLists.txt  CMakeSettings.json
Common2/: common2.hpp
Common2/Container/: pool.hpp  varying_vector.hpp  vector.hpp
Common2/Container/Specialization/: pool_indexed.hpp  pool_of_vector.hpp  vector_of_vector.hpp
Common2/Macros/: macros.hpp
Common2/Memory/: memory.hpp  slice.hpp  span.hpp
test/: test.cpp
